@@ -7,6 +7,9 @@ CHANGES
 
 - Add an interface for ``DottedName`` field.
 
+- Add ``vocabularyName`` attribute to the ``IChoice`` interface, change
+  "vocabulary" attribute description to be more sensible.
+
 3.5.3 (2009-03-10)
 ------------------
 
